--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@ out
 !*/src/**/out
 
 build
+!.github/actions/build
 !*/src/**/build
 !*/*/src/**/build
 
-local.properties
+__pycache__
 
 **/.log
 .DS_Store
 
 .idea
+local.properties
