--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -1,7 +1,7 @@
-name: 'Verify PR'
+name: 'Check for new API spec version'
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
   schedule:
     - cron: '0 6 * * 1'
 
@@ -12,10 +12,23 @@ defaults:
 jobs:
 
   check-new-api-spec:
-    description: 'New API spec available?'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: 'Checkout'
         uses: actions/checkout@v3
-      - name: Check for new API spec
-        run: ./.github/scripts/check_for_new_api_spec.py
+      - name: 'Check for new API spec'
+        run: ./.github/scripts/update_api_spec_version.py
+      - name: 'Read current spec version'
+        run: |
+          version="$(./.github/scripts/read_current_api_spec_version.py)"
+          [[ -n "$version" ]]
+          echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
+      - name: 'Create PR'
+        uses: peter-evans/create-pull-request@v4
+        with:
+          branch: "feature/api-spec-${{ env.SPEC_VERSION }}"
+          commit-message: "Bump GE API spec version to ${{ env.SPEC_VERSION }}"
+          title: "Support Gradle Enterprise API ${{ env.SPEC_VERSION }}"
+          body: "https://docs.gradle.com/enterprise/api-manual/#release_history"
+          author: "github-actions <github-actions@github.com>"
+          committer: "github-actions <github-actions@github.com>"
