--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -10,7 +10,6 @@ on:
         required: true
 
 defaults:
-  runs-on: ubuntu-latest
   run:
     shell: bash
 
@@ -20,23 +19,29 @@ env:
 jobs:
 
   build-javadoc:
+    runs-on: ubuntu-latest
     outputs:
       version: ${{ env.VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ env.VERSION_NAME }}
       - name: Build javadoc
         uses: ./.github/actions/build
         with:
           tasks: 'javadocJar'
           artifact-name: 'javadoc'
-          path-to-upload: "build/libs/gradle-enterprise-api-kotlin-$VERSION_NAME-javadoc.jar"
+          path-to-upload: "build/libs/gradle-enterprise-api-kotlin-${{ env.VERSION_NAME }}-javadoc.jar"
 
-  push-javadoc:
+  commit-to-gh-pages:
     needs: [build-javadoc]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ env.VERSION_NAME }}
       - name: Download javadoc
         uses: actions/download-artifact@v3
       - name: Commit and push
