--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -20,13 +20,14 @@ jobs:
         run: ./.github/scripts/update_api_spec_version.py
       - name: 'Read current spec version'
         run: |
-          version=$(./.github/scripts/read_current_api_spec_version.py)
-          echo "SPEC_VERSION=$version" >> "$GITHUB_ENV"
+          version="$(./.github/scripts/read_current_api_spec_version.py)"
+          [[ -n "$version" ]]
+          echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
       - name: 'Create PR'
         uses: peter-evans/create-pull-request@v4
         with:
           branch: "feature/api-spec-${{ env.SPEC_VERSION }}"
           title: "Support Gradle Enterprise API ${{ env.SPEC_VERSION }}"
-          description: "https://docs.gradle.com/enterprise/api-manual/#release_history"
+          body: "https://docs.gradle.com/enterprise/api-manual/#release_history"
           author: "github-actions <github-actions@github.com>"
           committer: "github-actions <github-actions@github.com>"
