Dry run workflows indirectly

--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -9,7 +9,7 @@ on:
         description: 'Dry run'
         type: boolean
         required: false
-  pull_request:
+  workflow_call:
 
 defaults:
   run:
