--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -9,7 +9,7 @@ on:
         description: 'Dry run'
         type: boolean
         required: false
-  pull_request:
+  workflow_call:
 
 defaults:
   run:
