--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -33,7 +33,7 @@ jobs:
           [[ -n "$version" ]]
           echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
       - name: 'Create PR'
-        if: ${{ DRY_RUN == 'false' }}
+        if: ${{ env.DRY_RUN == 'false' }}
         uses: peter-evans/create-pull-request@v4
         with:
           branch: "feature/api-spec-${{ env.SPEC_VERSION }}"
