--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -1,13 +1,22 @@
 name: 'Check for new API spec version'
 
 on:
-  workflow_dispatch:
   schedule:
     - cron: '0 6 * * 1'
+  workflow_dispatch:
+    inputs:
+      dry_run:
+        description: 'Dry run'
+        type: boolean
+        required: false
+  workflow_call:
 
 defaults:
   run:
     shell: bash
+
+env:
+  DRY_RUN: ${{ github.event.inputs.dry_run || github.event_name == 'pull_request' }}
 
 jobs:
 
@@ -24,6 +33,7 @@ jobs:
           [[ -n "$version" ]]
           echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
       - name: 'Create PR'
+        if: ${{ env.DRY_RUN == 'false' }}
         uses: peter-evans/create-pull-request@v4
         with:
           branch: "feature/api-spec-${{ env.SPEC_VERSION }}"
