--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -5,52 +5,55 @@ on:
     tags: ['*']
   workflow_dispatch:
     inputs:
-      version_name:
-        description: 'Version'
-        required: true
+      dry_run:
+        description: 'Dry run'
+        type: boolean
+        required: false
+  workflow_call:
 
 defaults:
   run:
     shell: bash
 
 env:
-  VERSION_NAME: ${{ github.event.inputs.version_name || github.ref_name }}
+  DRY_RUN: ${{ github.event.inputs.dry_run || github.event_name == 'pull_request' }}
+  JAR_NAME: gradle-enterprise-api-kotlin-SNAPSHOT-javadoc.jar
 
 jobs:
 
   build-javadoc:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ env.VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: ${{ env.VERSION_NAME }}
       - name: Build javadoc
         uses: ./.github/actions/build
         with:
           tasks: 'javadocJar'
           artifact-name: 'javadoc'
-          path-to-upload: "build/libs/gradle-enterprise-api-kotlin-${{ env.VERSION_NAME }}-javadoc.jar"
+          path-to-upload: "build/libs/${{ env.JAR_NAME }}"
 
-  commit-to-gh-pages:
+  publish-javadoc:
     needs: [build-javadoc]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: ${{ env.VERSION_NAME }}
+      - name: Fetch branch
+        run: git fetch origin gh-pages && git checkout FETCH_HEAD
       - name: Download javadoc
         uses: actions/download-artifact@v3
-      - name: Commit and push
+      - name: Unzip javadoc
+        run: rm -rf docs && unzip "javadoc/$JAR_NAME" -d docs
+      - name: Commit
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git checkout gh-pages
-          rm -rf docs
-          unzip "gradle-enterprise-api-kotlin-$VERSION_NAME-javadoc.jar" -d docs
           git add docs
-          git commit -m "Add $VERSION_NAME javadoc"
-          git push
+          git commit -m "Add ${{ github.ref_name }} javadoc"
+      - name: Push
+        run: |
+          if [[ "$DRY_RUN" == 'true' ]]; then
+            args=' --dry-run'
+          fi
+          git push origin HEAD:gh-pages $args
