drop! break a workflow

--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           version="$(./.github/scripts/read_current_api_spec_version.py)"
           [[ -n "$version" ]]
+          exit 1
           echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
       - name: 'Create PR'
         if: ${{ env.DRY_RUN == 'false' }}
