--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -54,6 +54,8 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          echo "$DRY_RUN"
+          git status
           git add docs
           git commit -m "Add ${{ github.ref_name }} javadoc"
       - name: Push
