--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -43,6 +43,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
           ref: gh-pages
       - name: Download javadoc
         uses: actions/download-artifact@v3
