Add file to dry run conditions

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -70,6 +70,7 @@ jobs:
           files: |
             .github/workflows/check-new-api-spec.yml
             .github/scripts/*
+            gradle.properties
 
   dry-run-publish-javadoc:
     needs: [choose-dry-runs]
