--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -45,8 +45,43 @@ jobs:
         if: ${{ steps.diff.outputs.all_modified_files }}
         run: python3 -m unittest discover -bs .github/scripts
 
-  publish-javadoc-dry-run:
-    uses: ./.github/workflows/publish-javadoc.yml
+  choose-dry-runs:
+    runs-on: ubuntu-latest
+    outputs:
+      dry-run-publish-javadoc: ${{ steps.diff-publish-javadoc.outputs.all_modified_files }}
+      dry-run-check-new-api-spec: ${{ steps.diff-check-new-api-spec.outputs.all_modified_files }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Diff publish-javadoc.yml
+        id: diff-publish-javadoc
+        uses: tj-actions/changed-files@v24
+        with:
+          files: |
+            .github/workflows/publish-javadoc.yml
+            .github/scripts/*
+            **/src/**
+            **/*.gradle*
+            ./gradle/*
+      - name: Diff check-new-api-spec.yml
+        id: diff-check-new-api-spec
+        uses: tj-actions/changed-files@v24
+        with:
+          files: |
+            .github/workflows/check-new-api-spec.yml
+            .github/scripts/*
+            gradle.properties
 
-  check-new-api-spec-dry-run:
+  dry-run-publish-javadoc:
+    needs: [choose-dry-runs]
+    if: ${{ needs.choose-dry-runs.outputs.dry-run-publish-javadoc }}
+    uses: ./.github/workflows/publish-javadoc.yml
+    with:
+      dry_run: true
+
+  dry-run-check-new-api-spec:
+    needs: [choose-dry-runs]
+    if: ${{ needs.choose-dry-runs.outputs.dry-run-check-new-api-spec }}
     uses: ./.github/workflows/check-new-api-spec.yml
+    with:
+      dry_run: true
