--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -33,25 +33,45 @@ jobs:
       - name: Build javadoc
         uses: ./.github/actions/build
         with:
-          tasks: 'javadocJar'
+          tasks: 'dokkaHtml'
           artifact-name: 'javadoc'
-          path-to-upload: "build/libs/${{ env.JAR_NAME }}"
+          path-to-upload: "build/dokka/html/**/*"
+
+  test-readme-links:
+    runs-on: ubuntu-latest
+    needs: [build-javadoc]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Download new javadoc
+        uses: actions/download-artifact@v3
+        with:
+          path: 'build/dokka/html'
+      - name: Replace javadoc links for local links
+        run: ./.github/scripts/replace_readme_links.py && git diff
+      - name: Check README links
+        if: ${{ !inputs.dry_run }}
+        uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          folder-path: .
+          max-depth: 1
 
   publish-javadoc:
-    needs: [build-javadoc]
+    needs:
+      - build-javadoc
+      - test-readme-links
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           ref: gh-pages
-      - name: Download javadoc
+      - name: Delete current javadoc
+        run: rm -rf docs
+      - name: Download new javadoc
         uses: actions/download-artifact@v3
-      - name: Unzip javadoc
-        run: |
-          rm -rf docs
-          unzip "javadoc/$JAR_NAME" -d docs
-          rm -rf javadoc
+        with:
+          path: docs
       - name: Commit
         run: |
           git config user.name github-actions
