Trigger on gh-pages push

--- a/.github/workflows/test-readme-links.yml
+++ b/.github/workflows/test-readme-links.yml
@@ -2,7 +2,9 @@ name: 'Check PR'
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - gh-pages
   workflow_call:
   workflow_dispatch:
 
