Fix push permission for Dependabot PRs

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -37,6 +37,8 @@ jobs:
   publish-javadoc:
     needs: [build-javadoc]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
