--- a/.github/workflows/check-new-api-spec.yml
+++ b/.github/workflows/check-new-api-spec.yml
@@ -28,19 +28,19 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v3
       - name: 'Update API spec version'
-        run: ./.github/scripts/update_api_spec_version.py
-      - name: 'Read current spec version'
         run: |
-          version="$(./.github/scripts/read_current_api_spec_version.py)"
-          [[ -n "$version" ]]
-          echo "SPEC_VERSION=$version" | tee -a "$GITHUB_ENV"
+          if ./.github/scripts/update_api_spec_version.py | tee new.txt; then
+            echo "NEW_VERSION=$(cat new.txt)" >> $GITHUB_ENV
+          fi
+          rm new.txt || true
       - name: 'Create PR'
-        if: ${{ !inputs.dry_run }}
+        if: ${{ !inputs.dry_run && env.NEW_VERSION }}
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: "feature/api-spec-${{ env.SPEC_VERSION }}"
-          commit-message: "Bump GE API spec version to ${{ env.SPEC_VERSION }}"
-          title: "Support Gradle Enterprise API ${{ env.SPEC_VERSION }}"
+          branch: "feature/api-spec-${{ env.NEW_VERSION }}"
+          commit-message: "Bump GE API spec version to ${{ env.NEW_VERSION }}"
+          title: "Bump GE API spec version to ${{ env.NEW_VERSION }}"
           body: "https://docs.gradle.com/enterprise/api-manual/#release_history"
           author: "github-actions <github-actions@github.com>"
           committer: "github-actions <github-actions@github.com>"
+          add-paths: "gradle.properties"
