Fix dry-run logic in build action

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -8,13 +8,13 @@ on:
       dry_run:
         description: 'Dry run'
         type: boolean
-        required: false
+        default: false
   workflow_call:
     inputs:
       dry_run:
         description: 'Dry run'
         type: boolean
-        required: true
+        default: false
 
 defaults:
   run:
