--- a/.github/workflows/publish-library.yml
+++ b/.github/workflows/publish-library.yml
@@ -8,13 +8,13 @@ on:
       dry_run:
         description: 'Dry run'
         type: boolean
-        required: false
+        default: false
   workflow_call:
     inputs:
       dry_run:
         description: 'Dry run'
         type: boolean
-        required: true
+        default: false
 
 defaults:
   run:
