--- a/.github/workflows/update-api-spec.yml
+++ b/.github/workflows/update-api-spec.yml
@@ -37,8 +37,9 @@ jobs:
         if: ${{ env.NEW_VERSION }}
         run: |
           set -u
-          echo "UPDATE_BRANCH='feature/api-spec-$NEW_VERSION'" >> $GITHUB_ENV
-          if git ls-remote --exit-code --heads origin "$UPDATE_BRANCH"; then
+          update_branch="feature/api-spec-$NEW_VERSION"
+          echo "UPDATE_BRANCH=$update_branch" >> $GITHUB_ENV
+          if git ls-remote --exit-code --heads origin "$update_branch"; then
             echo "EXISTING_PR=true" >> $GITHUB_ENV
           fi
       - name: 'Create PR'
