--- a/.github/workflows/update-api-spec.yml
+++ b/.github/workflows/update-api-spec.yml
@@ -33,14 +33,24 @@ jobs:
             echo "NEW_VERSION=$(cat new.txt)" >> $GITHUB_ENV
           fi
           rm new.txt || true
+      - name: Check for existing PR
+        if: ${{ env.NEW_VERSION }}
+        run: |
+          set -u
+          update_branch="feature/api-spec-$NEW_VERSION"
+          echo "UPDATE_BRANCH=$update_branch" >> $GITHUB_ENV
+          if git ls-remote --exit-code --heads origin "$update_branch"; then
+            echo "EXISTING_PR=true" >> $GITHUB_ENV
+          fi
       - name: 'Create PR'
-        if: ${{ inputs.dry_run != true && env.NEW_VERSION }}
+        if: ${{ inputs.dry_run != true && env.NEW_VERSION && !env.EXISTING_PR }}
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: "feature/api-spec-${{ env.NEW_VERSION }}"
+          branch: "${{ env.UPDATE_BRANCH }}"
           commit-message: "Bump GE API spec version to ${{ env.NEW_VERSION }}"
           title: "Bump GE API spec version to ${{ env.NEW_VERSION }}"
           body: "https://docs.gradle.com/enterprise/api-manual/#release_history"
           author: "github-actions <github-actions@github.com>"
           committer: "github-actions <github-actions@github.com>"
           add-paths: "gradle.properties"
+          delete-branch: true
