Ensure version is stated in Javadoc

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Build javadoc
         uses: ./.github/actions/build
         with:
-          args: 'dokkaHtml'
+          args: >-
+            dokkaHtml
+            '-Pversion=${{ github.ref_name }}'
           artifact-name: 'docs'
           path-to-upload: "library/build/dokka/html/**/*"
 
