--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: pip install -r .github/scripts/requirements.txt
       - name: 'unittest discover'
         run: python3 -m unittest discover -bs .github/scripts
 
