--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v3
+      - run: pip install -r .github/scripts/requirements.txt
       - name: 'Get versions'
         run: |
           old_version="$(git tag --sort=-v:refname | head -n 2 | tail -n 1)"
