Add missing base param

--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -27,6 +27,7 @@ jobs:
       - name: 'Create PR'
         uses: peter-evans/create-pull-request@v5
         with:
+          base: 'main'
           branch: "${{ env.UPDATE_BRANCH }}"
           title: "Bump library version in examples to ${{ env.NEW_VERSION }}"
           author: "github-actions <github-actions@github.com>"
