--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: pip install -r .github/scripts/requirements.txt
       - name: 'Get versions'
         run: |
