--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,10 @@ updates:
       retrofit:
         patterns:
           - "com.squareup.retrofit2:*"
+  - package-ecosystem: "gradle"
+    directory: "/examples/example-project/"
+    schedule:
+      interval: "daily"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
