Opt-in to 9.0 behavior

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
+# Becomes default in Gradle 9.0
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 version=SNAPSHOT
 # Must be later than 2022.1
 gradle.enterprise.version=2023.3
