--- a/.github/workflows/submit-dependencies.yml
+++ b/.github/workflows/submit-dependencies.yml
@@ -20,13 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Gradle
-        uses: ./.github/actions/build
       - name: Submit Gradle dependencies
-        uses: mikepenz/gradle-dependency-submission@v0.9.2
-        with:
-          use-gradlew: false
-          include-build-environment: true
-          gradle-build-configuration-mapping: |
-            :library|compileClasspath
-            :library|runtimeClasspath
+        uses: gradle/actions/dependency-submission@v3
+        env:
+          DEPENDENCY_GRAPH_EXCLUDE_CONFIGURATIONS: '.*[Tt]est(Compile|Runtime)Classpath'
