Use fixed version in gradle.properties

--- a/.github/workflows/publish-library.yml
+++ b/.github/workflows/publish-library.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Verify that version property matches tag
+        if: ${{ inputs.dry_run != true }}
+        run: grep -qP '^version=${{ github.ref_name }}$' gradle.properties
       - name: gradle publishLibraryPublicationToMavenCentralRepository
         uses: ./.github/actions/build
         with:
@@ -34,7 +37,6 @@ jobs:
           args: >-
             publishLibraryPublicationToMavenCentralRepository
             --rerun-tasks
-            '-Pversion=${{ github.ref_name }}'
             '-Pmaven.central.username=${{ secrets.MAVEN_CENTRAL_USERNAME }}'
             '-Pmaven.central.password=${{ secrets.MAVEN_CENTRAL_PASSWORD }}'
             '-Psigning.password=${{ secrets.GPG_PASSWORD }}'
