--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,8 @@
+group=com.gabrielfeo
+artifact=gradle-enterprise-api-kotlin
+version=2023.4.0
+gradle.enterprise.version=2023.4
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
 org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
-version=SNAPSHOT
-# Must be later than 2022.1
-gradle.enterprise.version=2023.4
-group=com.gabrielfeo
-artifact=gradle-enterprise-api-kotlin
