--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,8 +43,8 @@ jobs:
       - name: gradle openApiGenerate (PR ref)
         uses: ./.github/actions/build
         with:
-          args: 'openApiGenerate'
-      - run: mv ./library/build/generated/openapi-generator ./pr-ref-api
+          args: 'openApiGenerate postProcessGeneratedApi'
+      - run: mv ./library/build/post-processed-api ./pr-ref-api
       - name: Checkout base ref
         uses: actions/checkout@v4
         with:
