--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
 org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
+systemProp.scan.capture-build-logging=false
+systemProp.scan.capture-test-logging=false
