Disable README links test
(cherry picked from commit cac8e150b0234c6d71ccd7909760e3d6d6e361b7)

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,8 +30,9 @@ jobs:
       - name: 'unittest discover'
         run: python3 -m unittest discover -bs .github/scripts
 
-  readme-links-test:
-    uses: ./.github/workflows/test-readme-links.yml
+  # TODO Re-enable once rename is done (too many dead links until new javadoc is published)
+  # readme-links-test:
+  #   uses: ./.github/workflows/test-readme-links.yml
 
   generated-api-diff:
     runs-on: ubuntu-latest
