--- a/.github/scripts/requirements.txt
+++ b/.github/scripts/requirements.txt
@@ -1,1 +1,8 @@
+certifi==2024.2.2
+charset-normalizer==3.3.2
+gitdb==4.0.11
 GitPython==3.1.43
+idna==3.6
+requests==2.31.0
+smmap==5.0.1
+urllib3==2.2.1
