Rename many things to Develocity (#177)
Find and replace `gradle[-_./]enterprise` and other variations for
Develocity.

Disable README links test in PRs for now. New links remain broken until
after the repository rename and Pages publish at that path.

Part of #184

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=com.gabrielfeo
-artifact=gradle-enterprise-api-kotlin
+artifact=develocity-api-kotlin
 version=2024.1.0
-gradle.enterprise.version=2024.1
+develocity.version=2024.1
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
