--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ org.gradle.caching=true
 org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 systemProp.scan.capture-build-logging=false
 systemProp.scan.capture-test-logging=false
+kotlin.jupyter.add.testkit=false
