Fix javadoc missing generated API

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group=com.gabrielfeo
 artifact=develocity-api-kotlin
 version=2024.1.0
 develocity.version=2024.1
+repo.url=https://github.com/gabrielfeo/develocity-api-kotlin
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
