--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -75,6 +75,11 @@ jobs:
           body-file: 'comment.md'
           edit-mode: replace
 
+  dry-run-publish-javadoc:
+    uses: ./.github/workflows/publish-javadoc.yml
+    with:
+      dry_run: true
+
   dry-run-publish-library:
     uses: ./.github/workflows/publish-library.yml
     with:
