--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,4 +6,9 @@
   "ignorePaths": [
     "**/test_resources/**",
   ],
+  "dependencyDashboard": "false",
+  "branchConcurrentLimit": 0,
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0,
+  "rebaseWhen": "always",
 }
