--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,9 +17,7 @@ jobs:
       - name: gradle test
         uses: ./.github/actions/build
         with:
-          args: 'test compileIntegrationTestKotlin'
-          # artifact-name: 'Test reports (${{matrix.runner}})'
-          # path-to-upload: '**/build/reports/tests/**'
+          args: 'check -x :library:integrationTest'
 
   python-tests:
     runs-on: ubuntu-latest
