--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,7 +17,10 @@ jobs:
       - name: gradle test
         uses: ./.github/actions/build
         with:
-          args: 'check -x :library:integrationTest'
+          args: >-
+            test
+            compileIntegrationTestKotlin
+            :build-logic:check
 
   python-tests:
     runs-on: ubuntu-latest
