--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,9 +17,10 @@ jobs:
       - name: gradle test
         uses: ./.github/actions/build
         with:
-          args: 'test compileIntegrationTestKotlin'
-          # artifact-name: 'Test reports (${{matrix.runner}})'
-          # path-to-upload: '**/build/reports/tests/**'
+          args: >-
+            test
+            compileIntegrationTestKotlin
+            :build-logic:check
 
   python-tests:
     runs-on: ubuntu-latest
