Fix packageRules warning
>matchPackageNames will try matching packageName first and then fall back to matching depName. If the fallback is used, Renovate will log a warning, because the fallback will be removed in a future release. Use matchDepNames instead.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -16,12 +16,12 @@
   "packageRules": [
     // Add a changelog link to Develocity plugin PRs
     {
-      "matchPackageNames": ["com.gradle.develocity"],
+      "matchDepNames": ["com.gradle.develocity"],
       "prBodyNotes": "https://docs.gradle.com/develocity/gradle-plugin/current#release_history"
     },
     // Group Kotlin/Jupyter artifact bumps
     {
-      "matchPackageNames": [
+      "matchDepNames": [
         "kotlin-jupyter-test-kit",
         "kotlin-jupyter-api",
         "org.jetbrains.kotlin.jupyter.api",
