--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,9 @@
   "extends": [
     "config:recommended",
   ],
+  "schedule": [
+    "0 6 * * 1",
+  ],
   "ignorePaths": [
     "**/test_resources/**",
   ],
