Reduce Renovate frequency (#270)
Change Renovate frequency to a more predictable once-a-week, instead of
default "at any time".

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,10 @@
   "extends": [
     "config:recommended",
   ],
+  "schedule": [
+    // Runs once, despite '*' minutes (https://docs.renovatebot.com/configuration-options/#schedule)
+    "* 6 * * 1",
+  ],
   "ignorePaths": [
     "**/test_resources/**",
   ],
